# myStore

./: CMakeLists.txt
patterns/factory/: userfactory.cpp  userfactory.hpp
patterns/observer/: observer.hpp  publisher.hpp
store/: main.cpp
store/inc/: admin.hpp  customer.hpp  supplier.hpp  user.hpp
store/src/: customer.cpp  supplier.cpp  user.cpp
